WIP page now shows up

--- a/public/404.html
+++ b/public/404.html
@@ -1,114 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-    <meta charset="utf-8">
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <meta http-equiv="Accept-CH" content="DPR, Viewport-Width, Width">
-    <meta http-equiv="Cache-Control" content="public, max-age=31536000">
-    <meta http-equiv="Content-Security-Policy" content="default-src data: https: 'self' https://polyfill.io/ https://fonts.gstatic.com/* https://cdnjs.cloudflare.com/* https://res.cloudinary.com/okikio-assets/ 'unsafe-eval' 'unsafe-inline'; connect-src * data: blob: ws:; upgrade-insecure-requests">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="Description" content="The porfolio of Joseph, it contains all amazing projects etc...">
-    <link rel="preconnect" href="https://res.cloudinary.com/okikio-assets/">
-    <link rel="preconnect" href="https://polyfill.io/">
-    <link rel="preconnect" href="https://fonts.gstatic.com/">
-    <link rel="preconnect" href="https://cdnjs.cloudflare.com/">
-    <link rel="apple-touch-icon" sizes="57x57" href="/apple-icon-57x57.png">
-    <link rel="apple-touch-icon" sizes="60x60" href="/apple-icon-60x60.png">
-    <link rel="apple-touch-icon" sizes="72x72" href="/apple-icon-72x72.png">
-    <link rel="apple-touch-icon" sizes="76x76" href="/apple-icon-76x76.png">
-    <link rel="apple-touch-icon" sizes="114x114" href="/apple-icon-114x114.png">
-    <link rel="apple-touch-icon" sizes="120x120" href="/apple-icon-120x120.png">
-    <link rel="apple-touch-icon" sizes="144x144" href="/apple-icon-144x144.png">
-    <link rel="apple-touch-icon" sizes="152x152" href="/apple-icon-152x152.png">
-    <link rel="apple-touch-icon" sizes="180x180" href="/apple-icon-180x180.png">
-    <link rel="icon" type="image/png" sizes="192x192" href="/android-icon-192x192.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="96x96" href="/favicon-96x96.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
-    <link rel="manifest" href="manifest.json">
-    <meta name="theme-color" content="#4500ff">
-    <meta name="msapplication-TileColor" content="#4500ff">
-    <meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
-    <link rel="preload" href="https://fonts.gstatic.com/s/materialicons/v48/flUhRq6tzZclQEJ-Vdg-IuiaDsNc.woff2" as="font" type="font/woff2" crossorigin="anonymous" async>
-    <link rel="preload" href="https://fonts.gstatic.com/s/bungeeinline/v5/Gg8zN58UcgnlCweMrih332VuPGV_-Q.woff2" as="font" type="font/woff2" crossorigin="anonymous" async>
-    <link rel="preload" href="https://fonts.gstatic.com/s/montserrat/v14/JTURjIg1_i6t8kCHKm45_dJE3gnD_g.woff2" as="font" type="font/woff2" crossorigin="anonymous" async>
-    <link rel="preload" href="https://fonts.gstatic.com/s/montserrat/v14/JTURjIg1_i6t8kCHKm45_c5H3gnD_g.woff2" as="font" type="font/woff2" crossorigin="anonymous" async>
-    <link rel="preload" href="https://fonts.gstatic.com/s/varelaround/v12/w8gdH283Tvk__Lua32TysjIfp8uP.woff2" as="font" type="font/woff2" crossorigin="anonymous" async>
-    <link rel="preload" href="https://fonts.gstatic.com/s/roboto/v20/KFOmCnqEu92Fr1Mu4mxK.woff2" as="font" type="font/woff2" crossorigin="anonymous" async>
-    <link rel="stylesheet" href="./css/app.min.css" inline async>
-    <!--[if lt IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/nwmatcher/1.4.2/nwmatcher.min.js" async></script><script src="https://cdnjs.cloudflare.com/ajax/libs/json2/20160511/json2.min.js" async></script><script src="https://cdnjs.cloudflare.com/ajax/libs/selectivizr/1.0.2/selectivizr-min.js" async></script><script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.min.js" async></script><script src="https://cdnjs.cloudflare.com/ajax/libs/respond.js/1.4.2/respond.min.js" async></script><script src="https://cdnjs.cloudflare.com/ajax/libs/es5-shim/4.5.13/es5-shim.min.js" async></script><![endif]-->
-    <!--[if lt IE 10]><script src="https://cdnjs.cloudflare.com/ajax/libs/flexibility/2.0.1/flexibility.js" async></script><script>flexibility(document.documentElement);</script><![endif]-->
-    <script>
-        var check = function() {
-            "use strict";
-
-            if (typeof window.Symbol == "undefined") return false;
-            try {
-                Function("class Foo {}")();
-                Function("let bar = x => x+1;")();
-                Function("let bez = { a: 'b' }; let box = { b: 'a', ...bez };")();
-            } catch (e) {
-                return false;
-            }
-
-            return true;
-        };
-
-        var _require = function(src, fn) {
-            var head = document.getElementsByTagName('head')[0];
-            var script = document.createElement('script');
-            script.setAttribute("async", "");
-            script.type = 'text/javascript';
-            script.onload = fn;
-            script.onreadystatechange = function() {
-                if (this.readyState === 'complete') {
-                    fn();
-                }
-            };
-            script.src = src;
-            head.appendChild(script);
-        };
-
-        if (/msie|trident|edge/g.test(navigator.userAgent.toLowerCase()) || !check()) {
-            _require("https://cdnjs.cloudflare.com/ajax/libs/picturefill/3.0.3/picturefill.min.js");
-            _require("https://cdnjs.cloudflare.com/ajax/libs/html5-history-api/4.2.10/history.min.js");
-            _require("https://cdnjs.cloudflare.com/ajax/libs/html5-history-api/4.2.10/history.ielte7.min.js");
-        }
-    </script>
-    <title>Ooops!</title>
-</head>
-
-<body>
-    <section class="layer">
-        <div class="layer-image">
-            <div class="load-img">
-                <div class="img-contain layout-contain layout-contain-slim">
-                    <picture><img src="https://res.cloudinary.com/okikio-assets/image/upload/c_scale,dpr_auto,f_auto,fl_progressive:steep,q_100,w_auto/v1/josephojo-logo.jpg" alt="Assets city" inline loading="lazy"></picture><noscript>Javascript is necesscary for an amazing experience.<img class="core-img" src="https://res.cloudinary.com/okikio-assets/image/upload/c_scale,dpr_auto,f_auto,fl_progressive:steep,q_30,w_auto/v1/josephojo-logo.jpg" alt="Assets city" loading="lazy" width="auto"></noscript>
-                </div>
-            </div>
-        </div>
-        <div class="layer-image">
-            <div class="load-img">
-                <div class="img-contain">
-                    <picture>
-                        <source srcset="https://res.cloudinary.com/okikio-assets/image/upload/c_scale,dpr_auto,e_blur:150,f_auto,fl_progressive:steep,q_100,w_50/v1/mountains.webp" type="image/webp"><img class="core-img" src="https://res.cloudinary.com/okikio-assets/image/upload/c_scale,dpr_auto,e_blur:150,f_auto,fl_progressive:steep,q_100,w_50/v1/mountains.jpg" alt="Assets city" inline width="auto" loading="lazy"></picture>
-                    <picture><img class="placeholder-img" src="https://res.cloudinary.com/okikio-assets/image/upload/c_scale,dpr_auto,e_blur:150,f_auto,fl_progressive:steep,q_100,w_50/v1/mountains.jpg" alt="Assets city" inline loading="lazy"></picture><noscript>Javascript is necesscary for an amazing experience.<img class="core-img" src="https://res.cloudinary.com/okikio-assets/image/upload/c_scale,dpr_auto,f_auto,fl_progressive:steep,q_30,w_auto/v1/mountains.jpg" alt="Assets city" loading="lazy" width="auto"></noscript>
-                </div>
-            </div>
-        </div>
-        <article class="layout-contain">
-            <section class="layout layout-shorten layer-overflow-hide layer-max-height layout-flex layout-align-items-center layout-justify-content-start">
-                <section>
-                    <h3 class="style-secondary-dark style-font-title style-uppercase layout-margin-dull-vert layout-padding-vert-mini">Joseph</h3>
-                    <h1 class="style-white style-bold layer-title style-uppercase layout-margin-dull-vert-top">Coming SOON </h1>
-                    <h5 class="style-white style-line-height style-capital layer-content-detail">This website is currently in development. We are working day and night.</h5>
-                </section>
-            </section>
-        </article>
-    </section>
-    <script src="https://polyfill.io/v3/polyfill.min.js?flags=gated&amp;features=IntersectionObserver%2CHTMLPictureElement%2CXMLHttpRequest%2Cconsole.log%2Cdocument.querySelector%2Cfetch%2CrequestAnimationFrame%2C%7Ehtml5-elements%2C%7Eviewport%2CgetComputedStyle%2CMutationObserver%2CObject.assign%2CObject.getOwnPropertyNames%2CObject.keys%2CObject.values%2CRegExp.prototype.flags%2CURL%2Cblissfuljs%2Cdefault%2Ces2015%2Ces2016%2Ces2017%2Ces2018%2Ces5%2Ces6%2Ces7%2CArray.prototype.includes%2CArray.prototype.filter%2CArray.prototype.find%2CArray.prototype.forEach%2CArray.prototype.every%2CArray.isArray%2CArray.from%2CEvent" crossorigin="anonymous" async></script>
-    <script src="./js/app.vendor.min.js" inline defer></script>
-</body>
-
-</html>
+<!DOCTYPE html><html lang="en"><head><meta charset="utf-8"><meta http-equiv="Content-Type" content="text/html; charset=utf-8"><meta http-equiv="Accept-CH" content="DPR, Viewport-Width, Width"><meta http-equiv="Cache-Control" content="public, max-age=31536000"><meta http-equiv="Content-Security-Policy" content="default-src data: https: 'self' https://polyfill.io/ https://fonts.gstatic.com/* https://cdnjs.cloudflare.com/* https://res.cloudinary.com/okikio-assets/ 'unsafe-eval' 'unsafe-inline'; connect-src * data: blob: ws:; upgrade-insecure-requests"><meta name="viewport" content="width=device-width,initial-scale=1"><meta name="Description" content="The porfolio of Joseph, it contains all amazing projects etc..."><link rel="preconnect" href="https://res.cloudinary.com/okikio-assets/"><link rel="preconnect" href="https://polyfill.io/"><link rel="preconnect" href="https://fonts.gstatic.com/"><link rel="preconnect" href="https://cdnjs.cloudflare.com/"><link rel="apple-touch-icon" sizes="57x57" href="/apple-icon-57x57.png"><link rel="apple-touch-icon" sizes="60x60" href="/apple-icon-60x60.png"><link rel="apple-touch-icon" sizes="72x72" href="/apple-icon-72x72.png"><link rel="apple-touch-icon" sizes="76x76" href="/apple-icon-76x76.png"><link rel="apple-touch-icon" sizes="114x114" href="/apple-icon-114x114.png"><link rel="apple-touch-icon" sizes="120x120" href="/apple-icon-120x120.png"><link rel="apple-touch-icon" sizes="144x144" href="/apple-icon-144x144.png"><link rel="apple-touch-icon" sizes="152x152" href="/apple-icon-152x152.png"><link rel="apple-touch-icon" sizes="180x180" href="/apple-icon-180x180.png"><link rel="icon" type="image/png" sizes="192x192" href="/android-icon-192x192.png"><link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png"><link rel="icon" type="image/png" sizes="96x96" href="/favicon-96x96.png"><link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png"><link rel="manifest" href="manifest.json"><meta name="theme-color" content="#4500ff"><meta name="msapplication-TileColor" content="#4500ff"><meta name="msapplication-TileImage" content="/ms-icon-144x144.png"><link rel="preload" href="https://fonts.gstatic.com/s/materialicons/v48/flUhRq6tzZclQEJ-Vdg-IuiaDsNc.woff2" as="font" type="font/woff2" crossorigin="anonymous" async><link rel="preload" href="https://fonts.gstatic.com/s/bungeeinline/v5/Gg8zN58UcgnlCweMrih332VuPGV_-Q.woff2" as="font" type="font/woff2" crossorigin="anonymous" async><link rel="preload" href="https://fonts.gstatic.com/s/montserrat/v14/JTURjIg1_i6t8kCHKm45_dJE3gnD_g.woff2" as="font" type="font/woff2" crossorigin="anonymous" async><link rel="preload" href="https://fonts.gstatic.com/s/montserrat/v14/JTURjIg1_i6t8kCHKm45_c5H3gnD_g.woff2" as="font" type="font/woff2" crossorigin="anonymous" async><link rel="preload" href="https://fonts.gstatic.com/s/varelaround/v12/w8gdH283Tvk__Lua32TysjIfp8uP.woff2" as="font" type="font/woff2" crossorigin="anonymous" async><link rel="preload" href="https://fonts.gstatic.com/s/roboto/v20/KFOmCnqEu92Fr1Mu4mxK.woff2" as="font" type="font/woff2" crossorigin="anonymous" async><link rel="stylesheet" href="./css/app.min.css" inline async><!--[if lt IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/nwmatcher/1.4.2/nwmatcher.min.js" async></script><script src="https://cdnjs.cloudflare.com/ajax/libs/json2/20160511/json2.min.js" async></script><script src="https://cdnjs.cloudflare.com/ajax/libs/selectivizr/1.0.2/selectivizr-min.js" async></script><script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.min.js" async></script><script src="https://cdnjs.cloudflare.com/ajax/libs/respond.js/1.4.2/respond.min.js" async></script><script src="https://cdnjs.cloudflare.com/ajax/libs/es5-shim/4.5.13/es5-shim.min.js" async></script><![endif]--><!--[if lt IE 10]><script src="https://cdnjs.cloudflare.com/ajax/libs/flexibility/2.0.1/flexibility.js" async></script><script>flexibility(document.documentElement);</script><![endif]--><script>var check=function(){"use strict";if(void 0===window.Symbol)return!1;try{Function("class Foo {}")(),Function("let bar = x => x+1;")(),Function("let bez = { a: 'b' }; let box = { b: 'a', ...bez };")()}catch(t){return!1}return!0},_require=function(t,e){var i=document.getElementsByTagName("head")[0],r=document.createElement("script");r.setAttribute("async",""),r.type="text/javascript",r.onload=e,r.onreadystatechange=function(){"complete"===this.readyState&&e()},r.src=t,i.appendChild(r)};!/msie|trident|edge/g.test(navigator.userAgent.toLowerCase())&&check()||(_require("https://cdnjs.cloudflare.com/ajax/libs/picturefill/3.0.3/picturefill.min.js"),_require("https://cdnjs.cloudflare.com/ajax/libs/html5-history-api/4.2.10/history.min.js"),_require("https://cdnjs.cloudflare.com/ajax/libs/html5-history-api/4.2.10/history.ielte7.min.js"))</script><title>Ooops!</title></head><body><section class="layer"><div class="layer-image"><div class="load-img"><div class="img-contain layout-contain layout-contain-slim"><picture><img src="https://res.cloudinary.com/okikio-assets/image/upload/c_scale,dpr_auto,f_auto,fl_progressive:steep,q_100,w_auto/v1/josephojo-logo.jpg" alt="Assets city" inline loading="lazy"></picture><noscript>Javascript is necesscary for an amazing experience.<img class="core-img" src="https://res.cloudinary.com/okikio-assets/image/upload/c_scale,dpr_auto,f_auto,fl_progressive:steep,q_30,w_auto/v1/josephojo-logo.jpg" alt="Assets city" loading="lazy" width="auto"></noscript></div></div></div><div class="layer-image"><div class="load-img"><div class="img-contain"><picture><source srcset="https://res.cloudinary.com/okikio-assets/image/upload/c_scale,dpr_auto,e_blur:150,f_auto,fl_progressive:steep,q_100,w_50/v1/mountains.webp" type="image/webp"><img class="core-img" src="https://res.cloudinary.com/okikio-assets/image/upload/c_scale,dpr_auto,e_blur:150,f_auto,fl_progressive:steep,q_100,w_50/v1/mountains.jpg" alt="Assets city" inline width="auto" loading="lazy"></picture><picture><img class="placeholder-img" src="https://res.cloudinary.com/okikio-assets/image/upload/c_scale,dpr_auto,e_blur:150,f_auto,fl_progressive:steep,q_100,w_50/v1/mountains.jpg" alt="Assets city" inline loading="lazy"></picture><noscript>Javascript is necesscary for an amazing experience.<img class="core-img" src="https://res.cloudinary.com/okikio-assets/image/upload/c_scale,dpr_auto,f_auto,fl_progressive:steep,q_30,w_auto/v1/mountains.jpg" alt="Assets city" loading="lazy" width="auto"></noscript></div></div></div><article class="layout-contain"><section class="layout layout-shorten layer-overflow-hide layer-max-height layout-flex layout-align-items-center layout-justify-content-start"><section><h3 class="style-secondary-dark style-font-title style-uppercase layout-margin-dull-vert layout-padding-vert-mini">Joseph</h3><h1 class="style-white style-bold layer-title style-uppercase layout-margin-dull-vert-top">Coming SOON</h1><h5 class="style-white style-line-height style-capital layer-content-detail">This website is currently in development. We are working day and night to have it in tip top shape.</h5></section></section></article></section><script src="https://polyfill.io/v3/polyfill.min.js?flags=gated&amp;features=IntersectionObserver%2CHTMLPictureElement%2CXMLHttpRequest%2Cconsole.log%2Cdocument.querySelector%2Cfetch%2CrequestAnimationFrame%2C%7Ehtml5-elements%2C%7Eviewport%2CgetComputedStyle%2CMutationObserver%2CObject.assign%2CObject.getOwnPropertyNames%2CObject.keys%2CObject.values%2CRegExp.prototype.flags%2CURL%2Cblissfuljs%2Cdefault%2Ces2015%2Ces2016%2Ces2017%2Ces2018%2Ces5%2Ces6%2Ces7%2CArray.prototype.includes%2CArray.prototype.filter%2CArray.prototype.find%2CArray.prototype.forEach%2CArray.prototype.every%2CArray.isArray%2CArray.from%2CEvent" crossorigin="anonymous" async></script><script src="./js/app.vendor.min.js" inline defer="defer"></script></body></html>
