--- a/public/contact.html
+++ b/public/contact.html
@@ -92,12 +92,14 @@
                 </section>
                 <section class="layout-spacer navbar-desktop"></section>
                 <section class="navbar-main">
-                    <ul class="navbar-list" id="swup">
-                        <li><a class="navbar-link" href="/about.html" data-swup-preload>about</a></li>
-                        <li><a class="navbar-link" href="/projects.html" data-swup-preload>projects</a></li>
-                        <li><a class="navbar-link navbar-link-focus" href="/contact.html" data-swup-preload>contact</a></li>
+                    <div class="layout-flex layout-align-items-center">
+                        <ul class="navbar-list" id="swup">
+                            <li><a class="navbar-link" href="/about.html" data-swup-preload>about</a></li>
+                            <li><a class="navbar-link" href="/projects.html" data-swup-preload>projects</a></li>
+                            <li><a class="navbar-link navbar-link-focus" href="/contact.html" data-swup-preload>contact</a></li>
+                        </ul>
                         <li class="navbar-desktop"><button class="add-button btn layer-round layout-padding-smaller layer-transparent layer-light-hover style-secondary style-hover-secondary-dark" tabindex="-1" type="button" title="Install App"><span class="btn-group"><i class="icon style-font-family-bold style-font-sz-24">add_circle_outline</i><span class="btn-spacer"></span><span class="btn-content">Install</span></span></button></li>
-                    </ul>
+                    </div>
                 </section>
             </article>
         </nav>
