Desktop, Tablet, Laptops, Phone dimensions added

--- a/public/about.html
+++ b/public/about.html
@@ -82,7 +82,7 @@
 <body>
     <header class="header">
         <nav class="navbar navbar-fixed">
-            <article class="layout-contain-large navbar-layout">
+            <article class="layout-contain-large navbar-layout layout-flex">
                 <section class="navbar-head"><a class="navbar-title style-primary style-primary-dark-hover style-primary-focus" href="/index.html" tabindex="0">JOSEPH!</a>
                     <section class="layout-spacer"></section>
                     <section class="navbar-foot navbar-mobile">
@@ -92,13 +92,11 @@
                 </section>
                 <section class="layout-spacer navbar-desktop"></section>
                 <section class="navbar-main">
-                    <div class="layout-flex layout-align-items-center">
-                        <ul class="navbar-list" id="swup">
-                            <li><a class="navbar-link navbar-link-focus" href="/about.html" data-swup-preload>about</a></li>
-                            <li><a class="navbar-link" href="/projects.html" data-swup-preload>projects</a></li>
-                            <li><a class="navbar-link" href="/contact.html" data-swup-preload>contact</a></li>
-                        </ul>
-                    </div>
+                    <ul class="navbar-list" id="swup">
+                        <li><a class="navbar-link navbar-link-focus" href="/about.html" data-swup-preload>about</a></li>
+                        <li><a class="navbar-link" href="/projects.html" data-swup-preload>projects</a></li>
+                        <li><a class="navbar-link" href="/contact.html" data-swup-preload>contact</a></li>
+                    </ul>
                 </section>
             </article>
         </nav>
@@ -123,12 +121,13 @@
                             </div>
                         </div>
                     </div>
-                    <section class="layout-enlarge">
+                    <section class="layout-enlarge layout-flex layout-align-items-center layout-justify-content-center layout-height-tablet layout-max-height">
                         <div class="layer-content style-center">
                             <section class="layer-header"></section>
                             <section class="layer-main">
-                                <h1 class="style-font-title layer-title style-white">Subpage.</h1><button class="next-layer btn layer-round layout-padding-small layer-tertiary layer-shadow layer-secondary-hover style-secondary style-hover-tertiary layer-hero-scroll-down" tabindex="0" type="button"><span class="btn-group"><i class="icon style-font-sz-36">expand_more</i></span></button>
+                                <h1 class="style-font-title layer-title style-white">Subpage.</h1>
                             </section>
+                            <section class="layer-footer layout-align-self-end"><button class="next-layer btn layer-round layout-padding-small layer-tertiary layer-shadow layer-secondary-hover style-secondary style-hover-tertiary layer-hero-scroll-down" tabindex="0" type="button"><span class="btn-group"><i class="icon style-font-sz-36">expand_more</i></span></button></section>
                         </div>
                     </section>
                 </div>
