--- a/public/contact.html
+++ b/public/contact.html
@@ -82,7 +82,7 @@
 <body>
     <header class="header">
         <nav class="navbar navbar-fixed">
-            <article class="layout-contain-large navbar-layout">
+            <article class="layout-contain-large navbar-layout layout-flex">
                 <section class="navbar-head"><a class="navbar-title style-primary style-primary-dark-hover style-primary-focus" href="/index.html" tabindex="0">JOSEPH!</a>
                     <section class="layout-spacer"></section>
                     <section class="navbar-foot navbar-mobile">
@@ -92,13 +92,11 @@
                 </section>
                 <section class="layout-spacer navbar-desktop"></section>
                 <section class="navbar-main">
-                    <div class="layout-flex layout-align-items-center">
-                        <ul class="navbar-list" id="swup">
-                            <li><a class="navbar-link" href="/about.html" data-swup-preload>about</a></li>
-                            <li><a class="navbar-link" href="/projects.html" data-swup-preload>projects</a></li>
-                            <li><a class="navbar-link navbar-link-focus" href="/contact.html" data-swup-preload>contact</a></li>
-                        </ul>
-                    </div>
+                    <ul class="navbar-list" id="swup">
+                        <li><a class="navbar-link" href="/about.html" data-swup-preload>about</a></li>
+                        <li><a class="navbar-link" href="/projects.html" data-swup-preload>projects</a></li>
+                        <li><a class="navbar-link navbar-link-focus" href="/contact.html" data-swup-preload>contact</a></li>
+                    </ul>
                 </section>
             </article>
         </nav>
