--- a/public/about.html
+++ b/public/about.html
@@ -30,8 +30,9 @@
     <meta name="theme-color" content="#4500ff">
     <meta name="msapplication-TileColor" content="#4500ff">
     <meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
+    <link rel="preload" href="https://fonts.gstatic.com/s/frankruhllibre/v5/j8_36_fAw7jrcalD7oKYNX0QfAnPU0PG9JnGhLeI.woff2" as="font" type="font/woff2" crossorigin="anonymous" async>
+    <link rel="preload" href="https://fonts.gstatic.com/s/frankruhllibre/v5/j8_36_fAw7jrcalD7oKYNX0QfAnPUzPC9JnGhLeI.woff2" as="font" type="font/woff2" crossorigin="anonymous" async>
     <link rel="preload" href="https://fonts.gstatic.com/s/materialicons/v48/flUhRq6tzZclQEJ-Vdg-IuiaDsNc.woff2" as="font" type="font/woff2" crossorigin="anonymous" async>
-    <link rel="preload" href="https://fonts.gstatic.com/s/bungeeinline/v5/Gg8zN58UcgnlCweMrih332VuPGV_-Q.woff2" as="font" type="font/woff2" crossorigin="anonymous" async>
     <link rel="preload" href="https://fonts.gstatic.com/s/montserrat/v14/JTURjIg1_i6t8kCHKm45_dJE3gnD_g.woff2" as="font" type="font/woff2" crossorigin="anonymous" async>
     <link rel="preload" href="https://fonts.gstatic.com/s/montserrat/v14/JTURjIg1_i6t8kCHKm45_c5H3gnD_g.woff2" as="font" type="font/woff2" crossorigin="anonymous" async>
     <link rel="preload" href="https://fonts.gstatic.com/s/varelaround/v12/w8gdH283Tvk__Lua32TysjIfp8uP.woff2" as="font" type="font/woff2" crossorigin="anonymous" async>
@@ -121,11 +122,11 @@
                             </div>
                         </div>
                     </div>
-                    <section class="layout-enlarge layout-flex layout-align-items-center layout-justify-content-center layout-height-tablet layout-max-height">
+                    <section class="layout-enlarge layout-flex layout-align-items-center layout-justify-content-center">
                         <div class="layer-content style-center">
                             <section class="layer-header"></section>
                             <section class="layer-main">
-                                <h1 class="style-font-title layer-title style-white">Subpage.</h1>
+                                <h1 class="style-font-title layer-title style-white style-font-weight-bolder">Subpage.</h1>
                             </section>
                             <section class="layer-footer layout-align-self-end"><button class="next-layer btn layer-round layout-padding-small layer-tertiary layer-shadow layer-secondary-hover style-secondary style-hover-tertiary layer-hero-scroll-down" tabindex="0" type="button"><span class="btn-group"><i class="icon style-font-sz-36">expand_more</i></span></button></section>
                         </div>
