--- a/public/contact.html
+++ b/public/contact.html
@@ -13,70 +13,21 @@
     <link rel="preconnect" href="https://polyfill.io/">
     <link rel="preconnect" href="https://fonts.gstatic.com/">
     <link rel="preconnect" href="https://cdnjs.cloudflare.com/">
-    <link rel="apple-touch-icon" sizes="57x57" href="/apple-icon-57x57.png">
-    <link rel="apple-touch-icon" sizes="60x60" href="/apple-icon-60x60.png">
-    <link rel="apple-touch-icon" sizes="72x72" href="/apple-icon-72x72.png">
-    <link rel="apple-touch-icon" sizes="76x76" href="/apple-icon-76x76.png">
-    <link rel="apple-touch-icon" sizes="114x114" href="/apple-icon-114x114.png">
-    <link rel="apple-touch-icon" sizes="120x120" href="/apple-icon-120x120.png">
-    <link rel="apple-touch-icon" sizes="144x144" href="/apple-icon-144x144.png">
-    <link rel="apple-touch-icon" sizes="152x152" href="/apple-icon-152x152.png">
-    <link rel="apple-touch-icon" sizes="180x180" href="/apple-icon-180x180.png">
-    <link rel="icon" type="image/png" sizes="192x192" href="/android-icon-192x192.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="96x96" href="/favicon-96x96.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
     <link rel="manifest" href="manifest.json">
     <meta name="theme-color" content="#4500ff">
     <meta name="msapplication-TileColor" content="#4500ff">
     <meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
-    <link rel="preload" href="https://fonts.gstatic.com/s/frankruhllibre/v5/j8_36_fAw7jrcalD7oKYNX0QfAnPU0PG9JnGhLeI.woff2" as="font" type="font/woff2" crossorigin="anonymous" async>
-    <link rel="preload" href="https://fonts.gstatic.com/s/frankruhllibre/v5/j8_36_fAw7jrcalD7oKYNX0QfAnPUzPC9JnGhLeI.woff2" as="font" type="font/woff2" crossorigin="anonymous" async>
-    <link rel="preload" href="https://fonts.gstatic.com/s/materialicons/v48/flUhRq6tzZclQEJ-Vdg-IuiaDsNc.woff2" as="font" type="font/woff2" crossorigin="anonymous" async>
-    <link rel="preload" href="https://fonts.gstatic.com/s/montserrat/v14/JTURjIg1_i6t8kCHKm45_dJE3gnD_g.woff2" as="font" type="font/woff2" crossorigin="anonymous" async>
-    <link rel="preload" href="https://fonts.gstatic.com/s/montserrat/v14/JTURjIg1_i6t8kCHKm45_c5H3gnD_g.woff2" as="font" type="font/woff2" crossorigin="anonymous" async>
-    <link rel="preload" href="https://fonts.gstatic.com/s/varelaround/v12/w8gdH283Tvk__Lua32TysjIfp8uP.woff2" as="font" type="font/woff2" crossorigin="anonymous" async>
-    <link rel="preload" href="https://fonts.gstatic.com/s/roboto/v20/KFOmCnqEu92Fr1Mu4mxK.woff2" as="font" type="font/woff2" crossorigin="anonymous" async>
-    <link rel="stylesheet" href="./css/app.min.css" inline async>
+    <link rel="preload" href="https://fonts.gstatic.com/s/frankruhllibre/v5/j8_36_fAw7jrcalD7oKYNX0QfAnPU0PG9JnGhLeI.woff2" as="font" type="font/woff2" crossorigin="anonymous" async="">
+    <link rel="preload" href="https://fonts.gstatic.com/s/frankruhllibre/v5/j8_36_fAw7jrcalD7oKYNX0QfAnPUzPC9JnGhLeI.woff2" as="font" type="font/woff2" crossorigin="anonymous" async="">
+    <link rel="preload" href="https://fonts.gstatic.com/s/materialicons/v48/flUhRq6tzZclQEJ-Vdg-IuiaDsNc.woff2" as="font" type="font/woff2" crossorigin="anonymous" async="">
+    <link rel="preload" href="https://fonts.gstatic.com/s/montserrat/v14/JTURjIg1_i6t8kCHKm45_dJE3gnD_g.woff2" as="font" type="font/woff2" crossorigin="anonymous" async="">
+    <link rel="preload" href="https://fonts.gstatic.com/s/montserrat/v14/JTURjIg1_i6t8kCHKm45_c5H3gnD_g.woff2" as="font" type="font/woff2" crossorigin="anonymous" async="">
+    <link rel="preload" href="https://fonts.gstatic.com/s/varelaround/v12/w8gdH283Tvk__Lua32TysjIfp8uP.woff2" as="font" type="font/woff2" crossorigin="anonymous" async="">
+    <link rel="preload" href="https://fonts.gstatic.com/s/roboto/v20/KFOmCnqEu92Fr1Mu4mxK.woff2" as="font" type="font/woff2" crossorigin="anonymous" async="">
+    <link rel="stylesheet" href="./css/app.min.css" inline="" async="">
     <!--[if lt IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/nwmatcher/1.4.2/nwmatcher.min.js" async></script><script src="https://cdnjs.cloudflare.com/ajax/libs/json2/20160511/json2.min.js" async></script><script src="https://cdnjs.cloudflare.com/ajax/libs/selectivizr/1.0.2/selectivizr-min.js" async></script><script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.min.js" async></script><script src="https://cdnjs.cloudflare.com/ajax/libs/respond.js/1.4.2/respond.min.js" async></script><script src="https://cdnjs.cloudflare.com/ajax/libs/es5-shim/4.5.13/es5-shim.min.js" async></script><![endif]-->
     <!--[if lt IE 10]><script src="https://cdnjs.cloudflare.com/ajax/libs/flexibility/2.0.1/flexibility.js" async></script><script>flexibility(document.documentElement);</script><![endif]-->
-    <script>
-        var check = function() {
-            "use strict";
-
-            if (typeof window.Symbol == "undefined") return false;
-            try {
-                Function("class Foo {}")();
-                Function("let bar = x => x+1;")();
-                Function("let bez = { a: 'b' }; let box = { b: 'a', ...bez };")();
-            } catch (e) {
-                return false;
-            }
-
-            return true;
-        };
-
-        var _require = function(src, fn) {
-            var head = document.getElementsByTagName('head')[0];
-            var script = document.createElement('script');
-            script.setAttribute("async", "");
-            script.type = 'text/javascript';
-            script.onload = fn;
-            script.onreadystatechange = function() {
-                if (this.readyState === 'complete') {
-                    fn();
-                }
-            };
-            script.src = src;
-            head.appendChild(script);
-        };
-
-        if (/msie|trident|edge/g.test(navigator.userAgent.toLowerCase()) || !check()) {
-            _require("https://cdnjs.cloudflare.com/ajax/libs/picturefill/3.0.3/picturefill.min.js");
-            _require("https://cdnjs.cloudflare.com/ajax/libs/html5-history-api/4.2.10/history.min.js");
-            _require("https://cdnjs.cloudflare.com/ajax/libs/html5-history-api/4.2.10/history.ielte7.min.js");
-        }
-    </script>
+    <script> var check = function() { "use strict";  if (typeof window.Symbol == "undefined") return false; try { Function("class Foo {}")(); Function("let bar = x => x+1;")(); Function("let bez = { a: 'b' }; let box = { b: 'a', ...bez };")(); } catch (e) { return false; }  return true; };  var _require = function(src, fn) { var head = document.getElementsByTagName('head')[0]; var script = document.createElement('script'); script.setAttribute("async", ""); script.type = 'text/javascript'; script.onload = fn; script.onreadystatechange = function() { if (this.readyState === 'complete') { fn(); } }; script.src = src; head.appendChild(script); };  if (/msie|trident|edge/g.test(navigator.userAgent.toLowerCase()) || !check()) { _require("https://cdnjs.cloudflare.com/ajax/libs/picturefill/3.0.3/picturefill.min.js"); _require("https://cdnjs.cloudflare.com/ajax/libs/html5-history-api/4.2.10/history.min.js"); _require("https://cdnjs.cloudflare.com/ajax/libs/html5-history-api/4.2.10/history.ielte7.min.js"); } </script>
     <title>Contact</title>
 </head>
 
@@ -94,9 +45,9 @@
                 <section class="layout-spacer navbar-desktop"></section>
                 <section class="navbar-main">
                     <ul class="navbar-list" id="swup">
-                        <li><a class="navbar-link" href="/about.html" data-swup-preload>about</a></li>
-                        <li><a class="navbar-link" href="/projects.html" data-swup-preload>projects</a></li>
-                        <li><a class="navbar-link navbar-link-focus" href="/contact.html" data-swup-preload>contact</a></li>
+                        <li><a class="navbar-link" href="/about.html" data-swup-preload="">about</a></li>
+                        <li><a class="navbar-link" href="/projects.html" data-swup-preload="">projects</a></li>
+                        <li><a class="navbar-link navbar-link-focus" href="/contact.html" data-swup-preload="">contact</a></li>
                     </ul>
                 </section>
             </article>
@@ -126,8 +77,8 @@
             </div>
         </article>
     </div>
-    <script src="https://polyfill.io/v3/polyfill.min.js?flags=gated&amp;features=IntersectionObserver%2CHTMLPictureElement%2CXMLHttpRequest%2Cconsole.log%2Cdocument.querySelector%2Cfetch%2CrequestAnimationFrame%2C%7Ehtml5-elements%2C%7Eviewport%2CgetComputedStyle%2CMutationObserver%2CObject.assign%2CObject.getOwnPropertyNames%2CObject.keys%2CObject.values%2CRegExp.prototype.flags%2CURL%2Cblissfuljs%2Cdefault%2Ces2015%2Ces2016%2Ces2017%2Ces2018%2Ces5%2Ces6%2Ces7%2CArray.prototype.includes%2CArray.prototype.filter%2CArray.prototype.find%2CArray.prototype.forEach%2CArray.prototype.every%2CArray.isArray%2CArray.from%2CEvent" crossorigin="anonymous" async></script>
-    <script src="./js/app.vendor.min.js" inline defer></script>
+    <script src="https://polyfill.io/v3/polyfill.min.js?flags=gated&amp;features=IntersectionObserver%2CHTMLPictureElement%2CXMLHttpRequest%2Cconsole.log%2Cdocument.querySelector%2Cfetch%2CrequestAnimationFrame%2C%7Ehtml5-elements%2C%7Eviewport%2CgetComputedStyle%2CMutationObserver%2CObject.assign%2CObject.getOwnPropertyNames%2CObject.keys%2CObject.values%2CRegExp.prototype.flags%2CURL%2Cblissfuljs%2Cdefault%2Ces2015%2Ces2016%2Ces2017%2Ces2018%2Ces5%2Ces6%2Ces7%2CArray.prototype.includes%2CArray.prototype.filter%2CArray.prototype.find%2CArray.prototype.forEach%2CArray.prototype.every%2CArray.isArray%2CArray.from%2CEvent" crossorigin="anonymous" async=""></script>
+    <script src="./js/app.vendor.min.js" inline="" defer=""></script>
 </body>
 
 </html>
