--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
     <link rel="preconnect" href="https://polyfill.io/">
     <link rel="preconnect" href="https://fonts.gstatic.com/">
     <link rel="preconnect" href="https://cdnjs.cloudflare.com/">
-    <link rel="manifest" href="manifest.json">
+    <link rel="manifest" href="manifest.webmanifest">
     <meta name="theme-color" content="#4500ff">
     <meta name="msapplication-TileColor" content="#4500ff">
     <link rel="preload" href="https://polyfill.io/v3/polyfill.min.js?flags=gated&amp;features=default%2Ces7%2CHTMLPictureElement%2CObject.values%2Cfetch%2CgetComputedStyle%2CrequestAnimationFrame%2Cdocument.getElementsByClassName%2CWebAnimations" as="script" async="" crossorigin="anonymous">
