--- a/public/404.html
+++ b/public/404.html
@@ -6,7 +6,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <meta http-equiv="Accept-CH" content="DPR, Viewport-Width, Width">
     <meta http-equiv="Cache-Control" content="public, max-age=31536000">
-    <meta http-equiv="Content-Security-Policy" content="default-src data: https: 'self' https://polyfill.io/ https://fonts.gstatic.com/* https://cdnjs.cloudflare.com/* https://res.cloudinary.com/okikio-assets/ 'unsafe-eval' 'unsafe-inline'; connect-src * data: blob: ws:; upgrade-insecure-requests">
+    <meta http-equiv="Content-Security-Policy" content="default-src https: 'self'; font-src data: 'self' https://fonts.gstatic.com/; style-src 'self'; img-src data: 'self' https://res.cloudinary.com/okikio-assets/; script-src https://polyfill.io/ https://cdnjs.cloudflare.com/ 'self' 'unsafe-inline' 'unsafe-eval'; connect-src * blob: ws:; upgrade-insecure-requests">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="Description" content="The porfolio of Joseph, it contains all amazing projects etc...">
     <link rel="preconnect" href="https://res.cloudinary.com/okikio-assets/">
@@ -35,7 +35,7 @@
     <header class="header">
         <nav class="navbar navbar-fixed">
             <article class="layout-contain-large navbar-layout layout-flex">
-                <section class="navbar-head"><a class="navbar-title style-primary style-primary-dark-hover style-primary-focus" href="/index.html" tabindex="0">JOSEPH!</a>
+                <section class="navbar-head"><a class="navbar-title style-primary style-primary-dark-hover style-primary-focus" href="/index.html" tabindex="0"><img class="navbar-logo" src="https://res.cloudinary.com/okikio-assets/image/upload/c_scale,dpr_auto,f_auto,fl_progressive:steep,q_30,w_auto/v1/gear-svg-icon-logo.svg" inline=""><span>JOSEPH!</span></a>
                     <section class="layout-spacer"></section>
                     <section class="navbar-foot navbar-mobile">
                         <section class="layout-inline-block"></section>
