--- a/public/about.html
+++ b/public/about.html
@@ -6,7 +6,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <meta http-equiv="Accept-CH" content="DPR, Viewport-Width, Width">
     <meta http-equiv="Cache-Control" content="public, max-age=31536000">
-    <meta http-equiv="Content-Security-Policy" content="default-src https: 'self'; font-src data: 'self' https://fonts.gstatic.com/; style-src 'self' 'unsafe-inline'; img-src data: 'self' https://res.cloudinary.com/okikio-assets/; script-src https://polyfill.io/ https://cdnjs.cloudflare.com/ 'self' 'unsafe-inline' 'unsafe-eval'; connect-src * blob: ws:; upgrade-insecure-requests">
+    <meta http-equiv="Content-Security-Policy" content="default-src https: 'self'; font-src data: 'self' https://fonts.gstatic.com/; style-src 'self' 'unsafe-inline'; img-src data: 'self' https://res.cloudinary.com/okikio-assets/; script-src https://polyfill.io/ https://cdnjs.cloudflare.com/ 'self' 'unsafe-inline' 'unsafe-eval'; connect-src 'self' * blob: ws:; upgrade-insecure-requests">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="Description" content="The porfolio of Joseph, it contains all amazing projects etc...">
     <link rel="preconnect" href="https://res.cloudinary.com/okikio-assets/">
