--- a/public/projects.html
+++ b/public/projects.html
@@ -16,7 +16,7 @@
     <link rel="manifest" href="manifest.webmanifest">
     <meta name="theme-color" content="#4500ff">
     <meta name="msapplication-TileColor" content="#4500ff">
-    <link rel="preload" href="https://polyfill.io/v3/polyfill.min.js?flags=gated&amp;features=default%2Ces7%2CHTMLPictureElement%2CObject.values%2Cfetch%2CgetComputedStyle%2CrequestAnimationFrame%2Cdocument.getElementsByClassName%2CWebAnimations" as="script" async="" crossorigin="anonymous">
+    <link rel="preload" href="https://polyfill.io/v3/polyfill.min.js?flags=gated&amp;features=default%2Ces7%2CHTMLPictureElement%2CObject.values%2Cfetch%2CgetComputedStyle%2CrequestAnimationFrame%2Cdocument.getElementsByClassName%2CWebAnimations%2Cperformance.now" as="script" async="" crossorigin="anonymous">
     <link rel="preload" href="https://fonts.gstatic.com/s/frankruhllibre/v5/j8_36_fAw7jrcalD7oKYNX0QfAnPU0PG9JnGhLeI.woff2" as="font" type="font/woff2" crossorigin="anonymous" async="">
     <link rel="preload" href="https://fonts.gstatic.com/s/frankruhllibre/v5/j8_36_fAw7jrcalD7oKYNX0QfAnPUzPC9JnGhLeI.woff2" as="font" type="font/woff2" crossorigin="anonymous" async="">
     <link rel="preload" href="https://fonts.gstatic.com/s/materialicons/v48/flUhRq6tzZclQEJ-Vdg-IuiaDsNc.woff2" as="font" type="font/woff2" crossorigin="anonymous" async="">
@@ -27,7 +27,7 @@
     <link rel="stylesheet" href="./css/app.min.css" inline="" async="">
     <!--[if lt IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/nwmatcher/1.4.2/nwmatcher.min.js" async></script><script src="https://cdnjs.cloudflare.com/ajax/libs/json2/20160511/json2.min.js" async></script><script src="https://cdnjs.cloudflare.com/ajax/libs/selectivizr/1.0.2/selectivizr-min.js" async></script><script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.min.js" async></script><script src="https://cdnjs.cloudflare.com/ajax/libs/respond.js/1.4.2/respond.min.js" async></script><script src="https://cdnjs.cloudflare.com/ajax/libs/es5-shim/4.5.13/es5-shim.min.js" async></script><![endif]-->
     <!--[if lt IE 10]><script src="https://cdnjs.cloudflare.com/ajax/libs/flexibility/2.0.1/flexibility.js" async></script><script>flexibility(document.documentElement);</script><![endif]-->
-    <script> var check = function() { "use strict";  if (typeof window.Symbol == "undefined") return false; try { Function("class Foo {}")(); Function("let bar = x => x+1;")(); Function("let bez = { a: 'b' }; let box = { b: 'a', ...bez };")(); } catch (e) { return false; }  return true; };  var _require = function(src, fn) { var head = document.getElementsByTagName('head')[0]; var script = document.createElement('script'); script.setAttribute("async", ""); script.type = 'text/javascript'; script.onload = fn; script.onreadystatechange = function() { if (this.readyState === 'complete') { fn(); } }; script.src = src; head.appendChild(script); };  if (/msie|trident|edge/g.test(navigator.userAgent.toLowerCase()) || !check()) { _require("https://cdnjs.cloudflare.com/ajax/libs/picturefill/3.0.3/picturefill.min.js"); _require("https://cdnjs.cloudflare.com/ajax/libs/html5-history-api/4.2.10/history.min.js"); _require("https://cdnjs.cloudflare.com/ajax/libs/html5-history-api/4.2.10/history.ielte7.min.js"); } </script>
+    <script> var check = function() { "use strict"; if (typeof window.Symbol == "undefined") return false; try { Function("class Foo {}")(); Function("let bar = x => x+1;")(); Function("let bez = { a: 'b' }; let box = { b: 'a', ...bez };")(); } catch (e) { return false; } return true; }; var _require = function(src, fn) { var head = document.getElementsByTagName('head')[0]; var script = document.createElement('script'); script.setAttribute("async", ""); script.type = 'text/javascript'; script.onload = fn; script.onreadystatechange = function() { if (this.readyState === 'complete') { fn(); } }; script.src = src; head.appendChild(script); }; if (/msie|trident|edge/g.test(navigator.userAgent.toLowerCase()) || !check()) { _require("https://cdnjs.cloudflare.com/ajax/libs/picturefill/3.0.3/picturefill.min.js"); _require("https://cdnjs.cloudflare.com/ajax/libs/html5-history-api/4.2.10/history.min.js"); _require("https://cdnjs.cloudflare.com/ajax/libs/html5-history-api/4.2.10/history.ielte7.min.js"); } </script>
     <title>Projects</title>
 </head>
 
@@ -80,7 +80,7 @@
                             <section class="layer-main">
                                 <h1 class="style-font-title layer-title style-white style-font-weight-bolder">Projects.</h1>
                             </section>
-                            <section class="layer-footer layout-align-self-end"><button class="next-layer btn layer-round layout-padding-small layer-tertiary layer-shadow layer-secondary-hover style-secondary style-hover-tertiary layer-hero-scroll-down" tabindex="0" type="button"><span class="btn-group"><i class="icon style-font-sz-36">expand_more</i></span></button></section>
+                            <section class="layer-footer layout-align-self-end"><a class="btn layer-round layout-padding-small layer-tertiary layer-shadow layer-secondary-hover style-secondary style-hover-tertiary layer-hero-scroll-down" tabindex="0" type="button"><span class="btn-group"><i class="icon style-font-sz-36">expand_more</i></span></a></section>
                         </div>
                     </section>
                 </div>
@@ -104,12 +104,12 @@
         <article>
             <div class="layout-flex layout-padding-horz">
                 <section class="layout-spacer"></section>
-                <section class="layer-primary-dark layer-shadow layer-round"><button class="btn btn-hover layer-round layout-padding-smaller layer-primary-dark layer-primary-hover style-tertiary style-hover-tertiary" id="back-to-top" tabindex="0" type="button"><span class="btn-group"><i class="icon style-font-sz-24">expand_less</i><span class="btn-section"><span class="btn-spacer"></span><span class="btn-content">Back To Top</span></span></span></button><button class="copyright-btn btn btn-hover layer-round layout-padding-smaller layer-primary-dark layer-primary-hover style-tertiary style-hover-tertiary" id="swup" tabindex="0" type="button"><span class="btn-group style-font-sz-24"><i class="icon">copyright</i><span class="btn-section"><span class="btn-spacer"></span><span class="btn-content">2019 Okiki Ojo</span></span></span></button></section>
+                <section class="layer-primary-dark layer-shadow layer-round"><button class="back-to-top btn btn-hover layer-round layout-padding-smaller layer-primary-dark layer-primary-hover style-tertiary style-hover-tertiary" tabindex="0" type="button"><span class="btn-group"><i class="icon style-font-sz-24">expand_less</i><span class="btn-section"><span class="btn-spacer"></span><span class="btn-content">Back To Top</span></span></span></button><button class="copyright-btn btn btn-hover layer-round layout-padding-smaller layer-primary-dark layer-primary-hover style-tertiary style-hover-tertiary" tabindex="0" type="button"><span class="btn-group style-font-sz-24"><i class="icon">copyright</i><span class="btn-section"><span class="btn-spacer"></span><span class="btn-content">2019 Okiki Ojo</span></span></span></button></section>
             </div>
         </article>
     </div>
-    <script src="https://polyfill.io/v3/polyfill.min.js?flags=gated&amp;features=default%2Ces7%2CHTMLPictureElement%2CObject.values%2Cfetch%2CgetComputedStyle%2CrequestAnimationFrame%2Cdocument.getElementsByClassName%2CWebAnimations" crossorigin="anonymous" async=""></script>
-    <script src="./js/app.vendor.min.js" inline="" defer=""></script>
+    <script src="https://polyfill.io/v3/polyfill.min.js?flags=gated&amp;features=default%2Ces7%2CHTMLPictureElement%2CObject.values%2Cfetch%2CgetComputedStyle%2CrequestAnimationFrame%2Cdocument.getElementsByClassName%2CWebAnimations%2Cperformance.now" crossorigin="anonymous" async=""></script>
+    <script src="./js/app.modern.min.js" inline="" defer=""></script>
 </body>
 
 </html>
