--- a/public/index.html
+++ b/public/index.html
@@ -236,7 +236,7 @@
         </article>
     </div>
     <script src="https://polyfill.io/v3/polyfill.min.js?flags=gated&amp;features=default%2Ces7%2CHTMLPictureElement%2CObject.values%2Cfetch%2CgetComputedStyle%2CrequestAnimationFrame%2Cdocument.getElementsByClassName%2CWebAnimations%2Cperformance.now" crossorigin="" async=""></script>
-    <script src="./js/app.modern.min.js" inline="" defer=""></script>
+    <script src="./js/app.modern.min.js" inline="" async=""></script>
 </body>
 
 </html>
