--- a/public/projects.html
+++ b/public/projects.html
@@ -53,7 +53,7 @@
                     <section class="layout-spacer"></section>
                     <section class="navbar-foot navbar-mobile">
                         <section class="layout-inline-block"></section>
-                        <section class="layout-inline-block"><a class="navbar-menu btn layer-round layout-padding-smaller layer-transparent layer-light-hover style-primary style-hover-primary style-focus-primary" title="Menu Bar"><span class="btn-group"><i class="navbar-menu icon style-font-family-bold style-font-sz-24">menu</i></span></a></section>
+                        <section class="layout-inline-block"><a class="navbar-menu btn layer-round layout-padding-smaller layer-transparent layer-light-hover style-primary style-hover-primary style-focus-primary" title="Menu Bar"><span class="btn-group"><i class="icon style-font-family-bold style-font-sz-24">menu</i></span></a></section>
                     </section>
                 </section>
                 <section class="layout-spacer navbar-desktop"></section>
